@@ -2,7 +2,10 @@
 # Copyright 1999-2004 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
 #
-# $Id: ChangeLog,v 1.38 2004/12/30 03:05:17 port001 Exp $
+# $Id: ChangeLog,v 1.39 2004/12/31 17:03:12 port001 Exp $
+
+31 Dec 2004; Ian Leitch <port001@gentoo.org>:
+ * As a security measure, site modules now have to specify what methods they need to call.
 
 29 Dec 2004; Ian Leitch <port001@gentoo.org>:
  * New site module parent class: pym/SiteModule.py
